# fastapi-starter

./: README.md  example.env  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: config.py  main.py
app/routes/: general.py
docs/: _config.yml  index.md
docs/setup/: index.md  install-python.md  pip-venv.md  poetry.md  uv.md
docs/setup/environment/: index.md  pip-venv.md  poetry.md  uv.md
